# poto

./: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  presist_sync.rs
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs  life_game.rs
src/components/Canvas/: index.module.less  index.tsx
src/core/: view.tsx
src/hooks/: usePresist.ts  useSyncState.ts
src/pages/egg/: index.html  index.module.less  index.tsx
src/pages/home/: index.module.less  index.tsx
src/pages/settings/: index.tsx
src/tools/: file.ts
