[package]
name = "src-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
image = "0.24.5"
js-sys = "0.3.51"

[dependencies.web-sys]
version = "0.3"
features = [
]